fixed link overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -662,6 +662,7 @@ section {
     color: $blue;
     font-weight: 800;
     letter-spacing: 1px;
+    word-break: break-all;
     &:hover {
       text-decoration: underline;
     }
